--- a/Makefile.cross-compiles
+++ b/Makefile.cross-compiles
@@ -15,8 +15,8 @@ app:
 		gomips=$(shell echo "$(n)" | cut -d : -f 3);\
 		target_suffix=$${os}_$${arch};\
 		echo "Build $${os}-$${arch}...";\
-		env CGO_ENABLED=0 GOOS=$${os} GOARCH=$${arch} GOMIPS=$${gomips} go build -ldflags "$(LDFLAGS)" -o ./release/ruijie_weblogin_$${target_suffix} ./;\
+		env CGO_ENABLED=0 GOOS=$${os} GOARCH=$${arch} GOMIPS=$${gomips} go build -ldflags "$(LDFLAGS)" -o ./release/HustWebAuth_$${target_suffix} ./;\
 		echo "Build $${os}-$${arch} done";\
 	)
-	@mv ./release/ruijie_weblogin_windows_386 ./release/ruijie_weblogin_windows_386.exe
-	@mv ./release/ruijie_weblogin_windows_amd64 ./release/ruijie_weblogin_windows_amd64.exe
+	@mv ./release/HustWebAuth_windows_386 ./release/HustWebAuth_windows_386.exe
+	@mv ./release/HustWebAuth_windows_amd64 ./release/HustWebAuth_windows_amd64.exe
