--- a/.github/workflows/changeRelease.yml
+++ b/.github/workflows/changeRelease.yml
@@ -3,6 +3,7 @@ on:
   workflow_dispatch: {}
   push:
     paths: [CHANGELOG.md]
+    branches: [main]
     tags: ["*"]
 
 jobs:
@@ -13,5 +14,5 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         # optional
-        tag_prefix: ""
+        tag_prefix: "v"
         changelog: CHANGELOG.md
