--- a/.github/workflows/make.yml
+++ b/.github/workflows/make.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
-        go-version: 1.19
+        go-version: 1.20
 
     - name: Build
       run: make -f Makefile.cross-compiles
@@ -25,3 +25,11 @@ jobs:
       with:
           artifacts: "release/*"
           allowUpdates: true
+
+    - name: ChangeRelease
+      uses: dropseed/changerelease@v1
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        # optional
+        tag_prefix: "v"
+        changelog: CHANGELOG.md
